--- a/app/scss/_title.scss
+++ b/app/scss/_title.scss
@@ -45,7 +45,7 @@
         color: white;
         font-family: 'Source Sans Pro';
         font-weight: 200;
-        font-size: 2rem;
+        font-size: clamp(1.2rem, 4vw,2rem);
         margin: 0;
         opacity: 0;
         transform: translateY(3rem);
