--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -138,7 +138,7 @@ p {
   color: white;
   font-family: "Source Sans Pro";
   font-weight: 200;
-  font-size: 2rem;
+  font-size: clamp(1.2rem, 4vw,2rem);
   margin: 0;
   opacity: 0;
   transform: translateY(3rem);
@@ -154,23 +154,20 @@ p {
 .findmeat {
   display: flex;
   align-items: top;
-  justify-content: space-between;
+  justify-content: space-around;
   max-width: 30%;
-  margin-top: 11rem;
+  margin-top: 14rem;
   margin-left: auto;
   margin-right: auto;
 }
-.findmeat .item {
-  display: flex;
-  flex-direction: column;
-}
 .findmeat .item p {
-  max-width: 6rem;
+  width: 6rem;
+  font-size: clamp(0.5rem, 3vw, 1rem);
   opacity: 0;
   transition: opacity 300ms ease-in-out;
 }
 .findmeat .item img {
-  width: clamp(2rem, 4vw, 4rem);
+  width: clamp(1.5rem, 4vw, 4rem);
   transition: transform 100ms ease-in-out;
 }
 .findmeat .item img:hover {
